fix: fix spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -749,7 +749,7 @@ option:hover {
 .program-head {
   text-align: center;
   left: 1px;
-  margin-top: 10px;
+  margin: 10px 0 -30px;
 }
 
 .program-head .lines {
@@ -772,14 +772,14 @@ option:hover {
 }
 
 .program-item {
-  height: 428px;
+  height: 460px;
   width: 288px;
-  min-height: 428px;
+  min-height: 460px;
   min-width: 288px;
   max-width: 288px;
-  max-height: 428px;
+  max-height: 460px;
   display: grid !important;
-  grid-template: 98px 272px 58px / 1fr 1fr;
+  grid-template: 98px 304px 58px / 1fr 1fr;
   color: white;
   padding: 0;
   box-shadow: 0 0px 34px 0px rgba(0, 0, 0, 0.15);
@@ -1022,7 +1022,7 @@ option:hover {
 .program-button-container {
   display: flex;
   justify-content: center;
-  margin: 60px 0;
+  margin: 20px 0 60px;
   font-size: 14px;
 }
 
@@ -2926,7 +2926,7 @@ textarea::-webkit-scrollbar {
     display: none;
     justify-content: flex-end;
     align-items: center;
-    height: 373px;
+    height: 370px;
     width: 330px;
   }
 
@@ -3010,6 +3010,10 @@ textarea::-webkit-scrollbar {
   .button span {
     position: relative;
     top: 0px !important;
+  }
+
+  .gallerys {
+    padding: 64px 0 10px 0;
   }
 
   .gallery-line img {
